recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:1: error: Missing closing brace `}' assumed here
def squarre() {
^FourSquare:1: error: expected class or object definition
def squarre() {
^