recursion.logo.square.FourSquare.scala.code
def squarre() {
  for ( pas <- 1 to 4 {
    foward (100)
  	left()
}
override def run() {
}
